--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .Header1 {
   text-align: center;
 }
+/* .button1{
+  font-size: 40px;
+  
+} */
+.button{
+  height: 80px;
+  width: 80px;
+  font-size: 40px;
+}
